# micro-services-main

./: .gitignore
backend-services/: docker-compose.yml
backend-services/AuthenticationService/: .gitignore  AuthenticationService.sln
backend-services/inventory_go/: Dockerfile  docker-compose.yml  go.mod  go.sum  main.go
backend-services/orchestration_service/: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
backend-services/orchestration_service/app/: config.py  logger.py  main.py
backend-services/orchestration_service/app/models/: order.py  payment.py  saga_state.py
backend-services/orchestration_service/app/routers/: __init__.py  auth_dependencies.py  logs.py  order_router.py
backend-services/orchestration_service/app/services/: __init__.py  auth_http_client.py  event_consumer.py  message_publisher.py  redis_saga_store.py  saga_orchestrator.py
backend-services/order/: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
backend-services/order/app/: main.py
backend-services/order/app/api/: dependencies.py
backend-services/order/app/api/endpoints/: orders.py
backend-services/order/app/core/: config.py
backend-services/order/app/db/: base.py  dependencies.py
backend-services/order/app/dtos/: order_schema.py
backend-services/order/app/entity/: __init__.py  order.py  order_item.py
backend-services/order/app/logger/: __init__.py  sqlite_handler.py
backend-services/order/app/services/: auth_service.py  order_service.py  rabbitmq_consumer.py  rabbitmq_publisher.py
(+171 files in other folders)
