[project]
name = "orchestration_service"
version = "0.1.0"
description = "My orchestration service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.115.11",
  "cryptography==44.0.2",
  "pytest==8.3.5",
  "httpx==0.28.1",
  "fastapi[standard]",
  "pika==1.3.2",
  "redis==5.2.1"
]