[project]
name = "order-service"
version = "0.1.0"
description = "My order service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "SQLAlchemy==2.0.38",
  "PyMySQL==1.1.1",
  "fastapi==0.115.11",
  "cryptography==44.0.2",
  "pytest==8.3.5",
  "httpx==0.28.1",
  "fastapi[standard]",
  "pika==1.3.2"
]